Save&Restore Selection feature added.

--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -147,6 +147,9 @@
             <setting name="MinimizedRibbon" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ThumbnailMode" serializeAs="String">
+                <value>0</value>
+            </setting>
             <setting name="ThumbnailAnchor" serializeAs="String">
                 <value>0</value>
             </setting>
@@ -156,8 +159,8 @@
             <setting name="ThumbnailHeight" serializeAs="String">
                 <value>250</value>
             </setting>
-            <setting name="ThumbnailMode" serializeAs="String">
-                <value>0</value>
+            <setting name="AutoRestoreSelection" serializeAs="String">
+                <value>False</value>
             </setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
