Nuget package and Devexpress upgrade

--- a/FileExplorer.Extension.ImagePreview/FileExplorer.Extension.ImagePreview.csproj
+++ b/FileExplorer.Extension.ImagePreview/FileExplorer.Extension.ImagePreview.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
     
   <ItemGroup>
-    <PackageReference Include="DevExpress.Wpf.Core" Version="24.2.*-*">
+    <PackageReference Include="DevExpress.Wpf.Core" Version="25.1.*">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
     <PackageReference Include="PhotoSauce.MagicScaler" Version="0.15.0" />
@@ -38,7 +38,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy /y &quot;$(TargetDir)*.dll&quot; &quot;$(SolutionDir)FileExplorer\bin\$(ConfigurationName)\PreviewExtensions\$(ProjectName)\&quot;" />
+    <Exec Command="xcopy /y &quot;$(TargetDir)*.dll&quot; &quot;$(SolutionDir)FileExplorer\bin\$(ConfigurationName)\$(TargetFramework)\PreviewExtensions\$(ProjectName)\&quot;" />
   </Target>
 
 </Project>
