--- a/FileExplorer.Extension.SpreadSheetPreview/FileExplorer.Extension.SpreadSheetPreview.csproj
+++ b/FileExplorer.Extension.SpreadSheetPreview/FileExplorer.Extension.SpreadSheetPreview.csproj
@@ -10,10 +10,10 @@
   </ItemGroup>
     
   <ItemGroup>
-    <PackageReference Include="DevExpress.Wpf.Core" Version="24.2.*-*">
+    <PackageReference Include="DevExpress.Wpf.Core" Version="25.1.*">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
-    <PackageReference Include="DevExpress.Wpf.Spreadsheet" Version="24.2.*-*">
+    <PackageReference Include="DevExpress.Wpf.Spreadsheet" Version="25.1.*">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
   </ItemGroup>
@@ -25,7 +25,7 @@
   </ItemGroup>
     
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy /y &quot;$(TargetDir)*.dll&quot; &quot;$(SolutionDir)FileExplorer\bin\$(ConfigurationName)\PreviewExtensions\$(ProjectName)\&quot;" />
+    <Exec Command="xcopy /y &quot;$(TargetDir)*.dll&quot; &quot;$(SolutionDir)FileExplorer\bin\$(ConfigurationName)\$(TargetFramework)\PreviewExtensions\$(ProjectName)\&quot;" />
   </Target>
 
 </Project>
